--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <span class="date">Created August 12, 2016</span>
                 </div>
                 <div class="description">
-                    Playing with fire.
+                    Holy fire.
                 </div>
             </div>
         </div>
@@ -149,7 +149,7 @@
                     <span class="date">Created August 12, 2016</span>
                 </div>
                 <div class="description">
-                    Playing with fire.
+                    Holy fire.
                 </div>
             </div>
         </div>
@@ -170,7 +170,7 @@
                     <span class="date">Created August 12, 2016</span>
                 </div>
                 <div class="description">
-                    Playing with fire.
+                    Holy fire.
                 </div>
             </div>
         </div>
@@ -191,7 +191,7 @@
                     <span class="date">Created August 12, 2016</span>
                 </div>
                 <div class="description">
-                    Playing with fire.
+                    Holy fire.
                 </div>
             </div>
         </div>
@@ -212,7 +212,7 @@
                     <span class="date">Created August 12, 2016</span>
                 </div>
                 <div class="description">
-                    Playing with fire.
+                    Holy fire.
                 </div>
             </div>
         </div>
@@ -233,7 +233,7 @@
                     <span class="date">Created August 12, 2016</span>
                 </div>
                 <div class="description">
-                    Playing with fire.
+                    Holy fire.
                 </div>
             </div>
         </div>
@@ -242,32 +242,31 @@
     <div class="ui m0 modal">
         <i class="close icon"></i>
         <div class="header">
-            Profile Picture
+            Digital Graphics - SVG
         </div>
         <div class="image content">
             <div class="ui large image">
                 <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472355518/atarOptimize_txdmpt.svg">
             </div>
             <div class="description">
-                <div class="ui header">We've auto-chosen a profile image for you.</div>
-                <p>We've grabbed the following image from the <a href="https://www.gravatar.com" target="_blank">gravatar</a> image associated with your registered e-mail address.</p>
-                <p>Is it okay to use this photo?</p>
+                <div class="ui header">Atar</div>
+                <p>Design inspired by Atar which is the Zoroastrian concept of holy fire. This was an excersize in symmetry, smooth angles, proportions, gradients, cut-aways, additive shapes and symbolic interpretation. </p>
+
             </div>
         </div>
     </div>
     <div class="ui m1 modal">
         <i class="close icon"></i>
         <div class="header">
-            Profile Picture
+            Digital Graphics - SVG
         </div>
         <div class="image content">
             <div class="ui large image">
                 <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472357108/penguinOptimized_kkjoof.svg">
             </div>
             <div class="description">
-                <div class="ui header">We've auto-chosen a profile image for you.</div>
-                <p>We've grabbed the following image from the <a href="https://www.gravatar.com" target="_blank">gravatar</a> image associated with your registered e-mail address.</p>
-                <p>Is it okay to use this photo?</p>
+                <div class="ui header">Human Penguin</div>
+                <p>This was an excersize in anthropomorphic design giving a penguin human-like characteristics. Some of the concepts employed include symbolic interpretation, gradients, symmetry, proportions, and blending 3-D shapes with 2-D graphics.</p>
             </div>
         </div>
     </div>
