--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 
         body {}
 
+        p {
+            font-size: 18px;
+        }
+
         .ui.menu .item img.logo {
             margin-right: 1.5em;
             margin-left: 20%;
@@ -43,8 +47,8 @@
             color: black;
         }
 
-        .ui.inverted.menu .active.item {
-            color: red !important;
+        .ui.menu .active.item {
+            color: blue !important;
         }
 
         .ui.grid {
@@ -106,7 +110,7 @@
                     <span class="date">Created August 12, 2016</span>
                 </div>
                 <div class="description">
-                    Holy fire.
+                    Playing with fire.
                 </div>
             </div>
         </div>
@@ -141,15 +145,15 @@
                         </div>
                     </div>
                 </div>
-                <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472355518/atarOptimize_txdmpt.svg">
+                <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472372654/natto_wcf8wl.png">
             </div>
             <div class="content">
-                <a class="header">Atar</a>
+                <a class="header">Natto</a>
                 <div class="meta">
                     <span class="date">Created August 12, 2016</span>
                 </div>
                 <div class="description">
-                    Holy fire.
+                    Nat1 Natto Incubator results using black beans.
                 </div>
             </div>
         </div>
@@ -162,15 +166,15 @@
                         </div>
                     </div>
                 </div>
-                <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472355518/atarOptimize_txdmpt.svg">
+                <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472373137/incubatorIN_kfahkn.png">
             </div>
             <div class="content">
-                <a class="header">Atar</a>
+                <a class="header">Nat1 Incubator Inside</a>
                 <div class="meta">
                     <span class="date">Created August 12, 2016</span>
                 </div>
                 <div class="description">
-                    Holy fire.
+                    Inside picture of the Nat1 Natto Incubator.
                 </div>
             </div>
         </div>
@@ -183,57 +187,15 @@
                         </div>
                     </div>
                 </div>
-                <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472355518/atarOptimize_txdmpt.svg">
+                <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472373251/incubatorOUT_mdrpbu.png">
             </div>
             <div class="content">
-                <a class="header">Atar</a>
+                <a class="header">Nat1 Incubator Inside</a>
                 <div class="meta">
                     <span class="date">Created August 12, 2016</span>
                 </div>
                 <div class="description">
-                    Holy fire.
-                </div>
-            </div>
-        </div>
-        <div class="card">
-            <div class="blurring dimmable image">
-                <div class="ui dimmer">
-                    <div class="content">
-                        <div class="center">
-                            <div class="ui inverted b5 button">Enhance</div>
-                        </div>
-                    </div>
-                </div>
-                <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472355518/atarOptimize_txdmpt.svg">
-            </div>
-            <div class="content">
-                <a class="header">Atar</a>
-                <div class="meta">
-                    <span class="date">Created August 12, 2016</span>
-                </div>
-                <div class="description">
-                    Holy fire.
-                </div>
-            </div>
-        </div>
-        <div class="card">
-            <div class="blurring dimmable image">
-                <div class="ui dimmer">
-                    <div class="content">
-                        <div class="center">
-                            <div class="ui inverted b6 button">Enhance</div>
-                        </div>
-                    </div>
-                </div>
-                <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472355518/atarOptimize_txdmpt.svg">
-            </div>
-            <div class="content">
-                <a class="header">Atar</a>
-                <div class="meta">
-                    <span class="date">Created August 12, 2016</span>
-                </div>
-                <div class="description">
-                    Holy fire.
+                    Outside picture of the Nat1 Natto Incubator.
                 </div>
             </div>
         </div>
@@ -273,80 +235,50 @@
     <div class="ui m2 modal">
         <i class="close icon"></i>
         <div class="header">
-            Profile Picture
+            Health - Natto
         </div>
         <div class="image content">
             <div class="ui large image">
-                <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472357108/penguinOptimized_kkjoof.svg">
+                <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472372654/natto_wcf8wl.png">
             </div>
             <div class="description">
-                <div class="ui header">We've auto-chosen a profile image for you.</div>
-                <p>We've grabbed the following image from the <a href="https://www.gravatar.com" target="_blank">gravatar</a> image associated with your registered e-mail address.</p>
-                <p>Is it okay to use this photo?</p>
+                <div class="ui header">Nat1 Natto Incubator Results</div>
+                <p>The Nat1 incubator works flawlessly to produce perfectly fermented Natto by regulating the temperature to 100 degrees Fahrenheit. Natto is the result of fermenting beans with Bacillus subtilis, producing a unique superfood containing probiotics,
+                    vitamin K2 and proteases like nattokinase. Natto <a href="https://en.wikipedia.org/wiki/Natt%C5%8D">benefits</a> the circulatory system including clot-buster and blood thinner. It is the richest source of natural K2 and consumption
+                    has been strongly associated with bone health. A serving of natto provides 29% of daily value of Vitamin K, 22% for Vitamin C, 76% of manganese, 48% of iron, and 22% for dietary fiber. Additionally, a 2009 study showed <a href="https://en.wikipedia.org/wiki/Nattokinase">nattokinase</a>                    to be effective in catabolism of toxic amyloid fibrils associated with Alzheimer's Disease as well as the insulin fibrils associated with diabetes and the prion peptide fibrils associated with prion disease such as Mad Cow Disease.</p>
             </div>
         </div>
     </div>
     <div class="ui m3 modal">
         <i class="close icon"></i>
         <div class="header">
-            Profile Picture
+            Robotics - Arduino
         </div>
         <div class="image content">
             <div class="ui large image">
-                <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472357108/penguinOptimized_kkjoof.svg">
+                <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472373137/incubatorIN_kfahkn.png">
             </div>
             <div class="description">
-                <div class="ui header">We've auto-chosen a profile image for you.</div>
-                <p>We've grabbed the following image from the <a href="https://www.gravatar.com" target="_blank">gravatar</a> image associated with your registered e-mail address.</p>
-                <p>Is it okay to use this photo?</p>
+                <div class="ui header">Nat1 Natto Incubator Inside</div>
+                <p>The Nat1 incubator works flawlessly to produce perfectly fermented Natto by regulating the temperature to 100 degrees Fahrenheit. This is the inside of the incubator showing the Arduino microcontroller, a temperature sensor, heating element
+                    and the natto container. Nat1 features dual mechanical and programmable failsafe mechanisms. The first failsafe is programmed into the Arduino microcontroller checking if the sensor is operational--if not the unit will shutdown.
+                </p>
             </div>
         </div>
     </div>
     <div class="ui m4 modal">
         <i class="close icon"></i>
         <div class="header">
-            Profile Picture
+            Robotics - Arduino
         </div>
         <div class="image content">
             <div class="ui large image">
-                <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472357108/penguinOptimized_kkjoof.svg">
+                <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472373251/incubatorOUT_mdrpbu.png">
             </div>
             <div class="description">
-                <div class="ui header">We've auto-chosen a profile image for you.</div>
-                <p>We've grabbed the following image from the <a href="https://www.gravatar.com" target="_blank">gravatar</a> image associated with your registered e-mail address.</p>
-                <p>Is it okay to use this photo?</p>
-            </div>
-        </div>
-    </div>
-    <div class="ui m5 modal">
-        <i class="close icon"></i>
-        <div class="header">
-            Profile Picture
-        </div>
-        <div class="image content">
-            <div class="ui large image">
-                <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472357108/penguinOptimized_kkjoof.svg">
-            </div>
-            <div class="description">
-                <div class="ui header">We've auto-chosen a profile image for you.</div>
-                <p>We've grabbed the following image from the <a href="https://www.gravatar.com" target="_blank">gravatar</a> image associated with your registered e-mail address.</p>
-                <p>Is it okay to use this photo?</p>
-            </div>
-        </div>
-    </div>
-    <div class="ui m6 modal">
-        <i class="close icon"></i>
-        <div class="header">
-            Profile Picture
-        </div>
-        <div class="image content">
-            <div class="ui large image">
-                <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472357108/penguinOptimized_kkjoof.svg">
-            </div>
-            <div class="description">
-                <div class="ui header">We've auto-chosen a profile image for you.</div>
-                <p>We've grabbed the following image from the <a href="https://www.gravatar.com" target="_blank">gravatar</a> image associated with your registered e-mail address.</p>
-                <p>Is it okay to use this photo?</p>
+                <div class="ui header">Nat1 Natto Incubator Outside</div>
+                <p>The Nat1 incubator works flawlessly to produce perfectly fermented Natto by regulating the temperature to 100 degrees Fahrenheit. This is the outside of the incubator showing the insulated outer container, a power strip and GFCI housing
+                    which contains a relay. The second mechanical failsafe is located inside the GFCI housing where a relay is connected to the contacts in such a way that if a electrical surge were to occur the GFCI would activate and shutdown the unit.</p>
             </div>
         </div>
     </div>
@@ -376,10 +308,6 @@
             .modal('attach events', '.b3.button', 'show');
         $('.ui.m4.modal')
             .modal('attach events', '.b4.button', 'show');
-        $('.ui.m5.modal')
-            .modal('attach events', '.b5.button', 'show');
-        $('.ui.m6.modal')
-            .modal('attach events', '.b6.button', 'show');
     </script>
 </body>
 
