--- a/index.html
+++ b/index.html
@@ -21,7 +21,19 @@
             padding: 0;
         }
 
-        body {}
+        body {
+            /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f0f9ff+0,cbebff+47,a1dbff+100;Blue+3D+%2313 */
+            background: #f0f9ff;
+            /* Old browsers */
+            background: -moz-linear-gradient(top, hsla(204, 100%, 97%, 1) 0%, hsla(203, 100%, 90%, 1) 47%, hsla(203, 100%, 82%, 1) 100%);
+            /* FF3.6-15 */
+            background: -webkit-linear-gradient(top, hsla(204, 100%, 97%, 1) 0%, hsla(203, 100%, 90%, 1) 47%, hsla(203, 100%, 82%, 1) 100%);
+            /* Chrome10-25,Safari5.1-6 */
+            background: linear-gradient(to bottom, hsla(204, 100%, 97%, 1) 0%, hsla(203, 100%, 90%, 1) 47%, hsla(203, 100%, 82%, 1) 100%);
+            /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+            filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#f0f9ff', endColorstr='#a1dbff', GradientType=0);
+            /* IE6-9 */
+        }
 
         p {
             font-size: 18px;
@@ -48,7 +60,7 @@
         }
 
         .ui.menu .active.item {
-            color: blue !important;
+            color: black !important;
         }
 
         .ui.grid {
