--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472355518/atarOptimize_txdmpt.svg">
             </div>
             <div class="content">
-                <a class="header">Atar</a>
+                <div class="ui b0 red button">Atar</div>
                 <div class="meta">
                     <span class="date">Created August 12, 2016</span>
                 </div>
@@ -139,7 +139,7 @@
                 <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472357108/penguinOptimized_kkjoof.svg">
             </div>
             <div class="content">
-                <a class="header">Penguin Logo</a>
+                <div class="ui b1 red button">Human Penguin</div>
                 <div class="meta">
                     <span class="date">Created April 8, 2016</span>
                 </div>
@@ -160,7 +160,7 @@
                 <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472372654/natto_wcf8wl.png">
             </div>
             <div class="content">
-                <a class="header">Natto</a>
+                <div class="ui b2 red button">Natto</div>
                 <div class="meta">
                     <span class="date">Created August 12, 2016</span>
                 </div>
@@ -181,7 +181,7 @@
                 <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472373137/incubatorIN_kfahkn.png">
             </div>
             <div class="content">
-                <a class="header">Nat1 Incubator Inside</a>
+                <div class="ui b3 red button">Nat1 Incubator Inside</div>
                 <div class="meta">
                     <span class="date">Created August 12, 2016</span>
                 </div>
@@ -202,7 +202,7 @@
                 <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472373251/incubatorOUT_mdrpbu.png">
             </div>
             <div class="content">
-                <a class="header">Nat1 Incubator Inside</a>
+                <div class="ui b4 red button">Nat1 Incubator Outside</div>
                 <div class="meta">
                     <span class="date">Created August 12, 2016</span>
                 </div>
