--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
                 <a href="" class="brand item">
                     <img class="logo" src="https://res.cloudinary.com/siliconmagi/image/upload/v1472355518/atarOptimize_txdmpt.svg" alt="Silicon Magi Logo">
                 </a>
-                <a href="" class="active item">Home</a>
-                <a href="" class="item">Portfolio</a>
-                <a href="" class="item">Contact</a>
+                <a href="#" class="active item">Silicon Magi</a>
+                <a class="item">
+                    <div class="ui n0 blue button">Contact</div>
+                </a>
             </div>
         </div>
         <div class="mobile only narrow row">
@@ -96,9 +97,8 @@
                 </div>
             </div>
             <div class="ui vertical navbar menu">
-                <a href="" class="active item">Home</a>
-                <a href="" class="item">Portfolio</a>
-                <a href="" class="item">Contact</a>
+                <a href="#" class="active item">Home</a>
+                <div class="ui b0 red button">Atar</div>
             </div>
         </div>
     </div>
@@ -294,6 +294,22 @@
             </div>
         </div>
     </div>
+    <div class="ui mn modal">
+        <i class="close icon"></i>
+        <div class="header">
+            Contact
+        </div>
+        <div class="image content">
+            <div class="ui large image">
+                <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472355518/atarOptimize_txdmpt.svg">
+            </div>
+            <div class="description">
+                <div class="ui header">Contact Information</div>
+                <p>Email: admin@cupofcrypto.com</p>
+                <p>Github: https://github.com/siliconmagi</p>
+            </div>
+        </div>
+    </div>
     <!--end cards -->
     <!-- JS scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -320,6 +336,8 @@
             .modal('attach events', '.b3.button', 'show');
         $('.ui.m4.modal')
             .modal('attach events', '.b4.button', 'show');
+        $('.ui.mn.modal')
+            .modal('attach events', '.n0.button', 'show');
     </script>
 </body>
 
