--- a/index.html
+++ b/index.html
@@ -97,8 +97,10 @@
                 </div>
             </div>
             <div class="ui vertical navbar menu">
-                <a href="#" class="active item">Home</a>
-                <div class="ui b0 red button">Atar</div>
+                <a href="#" class="active item">Silicon Magi</a>
+                <a class="item">
+                    <div class="ui n0 blue button">Contact</div>
+                </a>
             </div>
         </div>
     </div>
@@ -300,7 +302,7 @@
             Contact
         </div>
         <div class="image content">
-            <div class="ui large image">
+            <div class="ui small image">
                 <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472355518/atarOptimize_txdmpt.svg">
             </div>
             <div class="description">
