--- a/index.html
+++ b/index.html
@@ -213,6 +213,48 @@
                 </div>
             </div>
         </div>
+        <div class="card">
+            <div class="blurring dimmable image">
+                <div class="ui dimmer">
+                    <div class="content">
+                        <div class="center">
+                            <div class="ui inverted b5 button">Enhance</div>
+                        </div>
+                    </div>
+                </div>
+                <img src="http://www.cupofcrypto.com/sites/default/files/gfci.JPG">
+            </div>
+            <div class="content">
+                <div class="ui b5 red button">Nat1 Datalogger</div>
+                <div class="meta">
+                    <span class="date">Created August 12, 2016</span>
+                </div>
+                <div class="description">
+                    Datalogger for the Nat1 Natto Incubator.
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="blurring dimmable image">
+                <div class="ui dimmer">
+                    <div class="content">
+                        <div class="center">
+                            <div class="ui inverted b6 button">Enhance</div>
+                        </div>
+                    </div>
+                </div>
+                <img src="http://www.cupofcrypto.com/sites/default/files/gfci_hookup.JPG">
+            </div>
+            <div class="content">
+                <div class="ui b6 red button">Nat1 GFCI relay</div>
+                <div class="meta">
+                    <span class="date">Created August 12, 2016</span>
+                </div>
+                <div class="description">
+                    GFCI relay hookup for Nat1 Natto Incubator.
+                </div>
+            </div>
+        </div>
     </div>
     <!-- Modals -->
     <div class="ui m0 modal">
@@ -296,6 +338,36 @@
             </div>
         </div>
     </div>
+    <div class="ui m5 modal">
+        <i class="close icon"></i>
+        <div class="header">
+            Robotics - Arduino
+        </div>
+        <div class="image content">
+            <div class="ui large image">
+                <img src="http://www.cupofcrypto.com/sites/default/files/gfci.JPG">
+            </div>
+            <div class="description">
+                <div class="ui header">Nat1 Datalogger</div>
+                <p>The Nat1 incubator works flawlessly to produce perfectly fermented Natto by regulating the temperature to 100 degrees Fahrenheit. This is the datalogger for the unit.</p>
+            </div>
+        </div>
+    </div>
+    <div class="ui m6 modal">
+        <i class="close icon"></i>
+        <div class="header">
+            Robotics - Arduino
+        </div>
+        <div class="image content">
+            <div class="ui large image">
+                <img src="http://www.cupofcrypto.com/sites/default/files/gfci_hookup.JPG">
+            </div>
+            <div class="description">
+                <div class="ui header">Nat1 GFCI relay</div>
+                <p>The Nat1 incubator works flawlessly to produce perfectly fermented Natto by regulating the temperature to 100 degrees Fahrenheit. This is the GFCI relay hookup for the unit.</p>
+            </div>
+        </div>
+    </div>
     <div class="ui mn modal">
         <i class="close icon"></i>
         <div class="header">
@@ -338,6 +410,10 @@
             .modal('attach events', '.b3.button', 'show');
         $('.ui.m4.modal')
             .modal('attach events', '.b4.button', 'show');
+        $('.ui.m5.modal')
+            .modal('attach events', '.b5.button', 'show');
+        $('.ui.m6.modal')
+            .modal('attach events', '.b6.button', 'show');
         $('.ui.mn.modal')
             .modal('attach events', '.n0.button', 'show');
     </script>
