--- a/index.html
+++ b/index.html
@@ -381,6 +381,7 @@
                 <div class="ui header">Contact Information</div>
                 <p>Email: admin@cupofcrypto.com</p>
                 <p>Github: https://github.com/siliconmagi</p>
+                <p>Skype: live:siliconmagi</p>
             </div>
         </div>
     </div>
