--- a/index.html
+++ b/index.html
@@ -255,6 +255,69 @@
                 </div>
             </div>
         </div>
+        <div class="card">
+            <div class="blurring dimmable image">
+                <div class="ui dimmer">
+                    <div class="content">
+                        <div class="center">
+                            <div class="ui inverted b6 button">Enhance</div>
+                        </div>
+                    </div>
+                </div>
+                <img src="http://www.cupofcrypto.com/sites/default/files/ethMine.png">
+            </div>
+            <div class="content">
+                <div class="ui b7 red button">Ethereum</div>
+                <div class="meta">
+                    <span class="date">Created August 13, 2015</span>
+                </div>
+                <div class="description">
+                    An Ethereum advertisement for meetups
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="blurring dimmable image">
+                <div class="ui dimmer">
+                    <div class="content">
+                        <div class="center">
+                            <div class="ui inverted b6 button">Enhance</div>
+                        </div>
+                    </div>
+                </div>
+                <img src="http://www.cupofcrypto.com/sites/default/files/block.png">
+            </div>
+            <div class="content">
+                <div class="ui b8 red button">Swordman</div>
+                <div class="meta">
+                    <span class="date">Created June 4, 2015</span>
+                </div>
+                <div class="description">
+                    A swordman image for blog entry at www.cupofcrypto.com
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="blurring dimmable image">
+                <div class="ui dimmer">
+                    <div class="content">
+                        <div class="center">
+                            <div class="ui inverted b6 button">Enhance</div>
+                        </div>
+                    </div>
+                </div>
+                <img src="http://www.cupofcrypto.com/sites/default/files/titor.png">
+            </div>
+            <div class="content">
+                <div class="ui b9 red button">John Titor</div>
+                <div class="meta">
+                    <span class="date">Created August 8, 2015</span>
+                </div>
+                <div class="description">
+                    An image for John Titor blog entry at www.cupofcrypto.com
+                </div>
+            </div>
+        </div>
     </div>
     <!-- Modals -->
     <div class="ui m0 modal">
@@ -368,6 +431,51 @@
             </div>
         </div>
     </div>
+    <div class="ui m7 modal">
+        <i class="close icon"></i>
+        <div class="header">
+            Advertising - Ethereum
+        </div>
+        <div class="image content">
+            <div class="ui large image">
+                <img src="http://www.cupofcrypto.com/sites/default/files/ethMine.png">
+            </div>
+            <div class="description">
+                <div class="ui header">Ethereum</div>
+                <p>An Ethereum advertisement for meetups</p>
+            </div>
+        </div>
+    </div>
+    <div class="ui m8 modal">
+        <i class="close icon"></i>
+        <div class="header">
+            Blog - Swordman
+        </div>
+        <div class="image content">
+            <div class="ui large image">
+                <img src="http://www.cupofcrypto.com/sites/default/files/block.png">
+            </div>
+            <div class="description">
+                <div class="ui header">Swordman</div>
+                <p>A Swordman image for blog entry at www.cupofcrypto.com</p>
+            </div>
+        </div>
+    </div>
+    <div class="ui m9 modal">
+        <i class="close icon"></i>
+        <div class="header">
+            Blog - Image
+        </div>
+        <div class="image content">
+            <div class="ui large image">
+                <img src="http://www.cupofcrypto.com/sites/default/files/titor.png">
+            </div>
+            <div class="description">
+                <div class="ui header">John Titor</div>
+                <p>An image for John Titor blog entry at www.cupofcrypto.com</p>
+            </div>
+        </div>
+    </div>
     <div class="ui mn modal">
         <i class="close icon"></i>
         <div class="header">
@@ -415,6 +523,12 @@
             .modal('attach events', '.b5.button', 'show');
         $('.ui.m6.modal')
             .modal('attach events', '.b6.button', 'show');
+        $('.ui.m7.modal')
+            .modal('attach events', '.b7.button', 'show');
+        $('.ui.m8.modal')
+            .modal('attach events', '.b8.button', 'show');
+        $('.ui.m9.modal')
+            .modal('attach events', '.b9.button', 'show');
         $('.ui.mn.modal')
             .modal('attach events', '.n0.button', 'show');
     </script>
