image hosting git

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="computer tablet only row">
             <div class="ui menu fixed">
                 <a href="" class="brand item">
-                    <img class="logo" src="https://res.cloudinary.com/siliconmagi/image/upload/v1472355518/atarOptimize_txdmpt.svg" alt="Silicon Magi Logo">
+                    <img class="logo" src="http://cdn.rawgit.com/siliconmagi/pictures/master/atar.svg" alt="Silicon Magi Logo">
                 </a>
                 <a href="#" class="active item">Silicon Magi</a>
                 <a class="item">
@@ -88,7 +88,7 @@
         <div class="mobile only narrow row">
             <div class="ui fixed navbar menu">
                 <a href="#" class="brand item">
-                    <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472355518/atarOptimize_txdmpt.svg" alt="Silicon Magi Logo">
+                    <img src="http://cdn.rawgit.com/siliconmagi/pictures/master/atar.svg" alt="Silicon Magi Logo">
                 </a>
                 <div class="right menu open">
                     <a href="" class="menu item">
@@ -116,7 +116,7 @@
                         </div>
                     </div>
                 </div>
-                <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472355518/atarOptimize_txdmpt.svg">
+                <img src="http://cdn.rawgit.com/siliconmagi/pictures/master/atar.svg">
             </div>
             <div class="content">
                 <div class="ui b0 red button">Atar</div>
@@ -138,7 +138,7 @@
                         </div>
                     </div>
                 </div>
-                <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472357108/penguinOptimized_kkjoof.svg">
+                <img src="http://cdn.rawgit.com/siliconmagi/pictures/master/penguin.svg">
             </div>
             <div class="content">
                 <div class="ui b1 red button">Human Penguin</div>
@@ -159,7 +159,7 @@
                         </div>
                     </div>
                 </div>
-                <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472372654/natto_wcf8wl.png">
+                <img src="https://raw.githubusercontent.com/siliconmagi/pictures/master/natto600.png">
             </div>
             <div class="content">
                 <div class="ui b2 red button">Natto</div>
@@ -180,7 +180,7 @@
                         </div>
                     </div>
                 </div>
-                <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472373137/incubatorIN_kfahkn.png">
+                <img src="https://raw.githubusercontent.com/siliconmagi/pictures/master/incubatorIN600.png">
             </div>
             <div class="content">
                 <div class="ui b3 red button">Nat1 Incubator Inside</div>
@@ -201,7 +201,7 @@
                         </div>
                     </div>
                 </div>
-                <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472373251/incubatorOUT_mdrpbu.png">
+                <img src="https://raw.githubusercontent.com/siliconmagi/pictures/master/incubatorOUT600.png">
             </div>
             <div class="content">
                 <div class="ui b4 red button">Nat1 Incubator Outside</div>
@@ -222,7 +222,7 @@
                         </div>
                     </div>
                 </div>
-                <img src="http://www.cupofcrypto.com/sites/default/files/gfci.JPG">
+                <img src="https://raw.githubusercontent.com/siliconmagi/pictures/master/gfci.JPG">
             </div>
             <div class="content">
                 <div class="ui b5 red button">Nat1 Datalogger</div>
@@ -243,7 +243,7 @@
                         </div>
                     </div>
                 </div>
-                <img src="http://www.cupofcrypto.com/sites/default/files/gfci_hookup.JPG">
+                <img src="https://raw.githubusercontent.com/siliconmagi/pictures/master/gfci_hookup.JPG">
             </div>
             <div class="content">
                 <div class="ui b6 red button">Nat1 GFCI relay</div>
@@ -264,7 +264,7 @@
                         </div>
                     </div>
                 </div>
-                <img src="http://www.cupofcrypto.com/sites/default/files/ethMine.png">
+                <img src="https://raw.githubusercontent.com/siliconmagi/pictures/master/ethMine.png">
             </div>
             <div class="content">
                 <div class="ui b7 red button">Ethereum</div>
@@ -285,7 +285,7 @@
                         </div>
                     </div>
                 </div>
-                <img src="http://www.cupofcrypto.com/sites/default/files/block.png">
+                <img src="https://raw.githubusercontent.com/siliconmagi/pictures/master/block.png">
             </div>
             <div class="content">
                 <div class="ui b8 red button">Swordman</div>
@@ -306,7 +306,7 @@
                         </div>
                     </div>
                 </div>
-                <img src="http://www.cupofcrypto.com/sites/default/files/titor.png">
+                <img src="https://raw.githubusercontent.com/siliconmagi/pictures/master/titor.png">
             </div>
             <div class="content">
                 <div class="ui b9 red button">John Titor</div>
@@ -327,7 +327,7 @@
         </div>
         <div class="image content">
             <div class="ui large image">
-                <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472355518/atarOptimize_txdmpt.svg">
+                <img src="http://cdn.rawgit.com/siliconmagi/pictures/master/atar.svg">
             </div>
             <div class="description">
                 <div class="ui header">Atar</div>
@@ -343,7 +343,7 @@
         </div>
         <div class="image content">
             <div class="ui large image">
-                <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472357108/penguinOptimized_kkjoof.svg">
+                <img src="http://cdn.rawgit.com/siliconmagi/pictures/master/penguin.svg">
             </div>
             <div class="description">
                 <div class="ui header">Human Penguin</div>
@@ -358,7 +358,7 @@
         </div>
         <div class="image content">
             <div class="ui large image">
-                <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472372654/natto_wcf8wl.png">
+                <img src="https://raw.githubusercontent.com/siliconmagi/pictures/master/natto600.png">
             </div>
             <div class="description">
                 <div class="ui header">Nat1 Natto Incubator Results</div>
@@ -375,7 +375,7 @@
         </div>
         <div class="image content">
             <div class="ui large image">
-                <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472373137/incubatorIN_kfahkn.png">
+                <img src="https://raw.githubusercontent.com/siliconmagi/pictures/master/incubatorIN600.png">
             </div>
             <div class="description">
                 <div class="ui header">Nat1 Natto Incubator Inside</div>
@@ -392,7 +392,7 @@
         </div>
         <div class="image content">
             <div class="ui large image">
-                <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472373251/incubatorOUT_mdrpbu.png">
+                <img src="https://raw.githubusercontent.com/siliconmagi/pictures/master/incubatorOUT600.png">
             </div>
             <div class="description">
                 <div class="ui header">Nat1 Natto Incubator Outside</div>
@@ -408,7 +408,7 @@
         </div>
         <div class="image content">
             <div class="ui large image">
-                <img src="http://www.cupofcrypto.com/sites/default/files/gfci.JPG">
+                <img src="https://raw.githubusercontent.com/siliconmagi/pictures/master/gfci.JPG">
             </div>
             <div class="description">
                 <div class="ui header">Nat1 Datalogger</div>
@@ -423,7 +423,7 @@
         </div>
         <div class="image content">
             <div class="ui large image">
-                <img src="http://www.cupofcrypto.com/sites/default/files/gfci_hookup.JPG">
+                <img src="https://raw.githubusercontent.com/siliconmagi/pictures/master/gfci_hookup.JPG">
             </div>
             <div class="description">
                 <div class="ui header">Nat1 GFCI relay</div>
@@ -438,7 +438,7 @@
         </div>
         <div class="image content">
             <div class="ui large image">
-                <img src="http://www.cupofcrypto.com/sites/default/files/ethMine.png">
+                <img src="https://raw.githubusercontent.com/siliconmagi/pictures/master/ethMine.png">
             </div>
             <div class="description">
                 <div class="ui header">Ethereum</div>
@@ -453,7 +453,7 @@
         </div>
         <div class="image content">
             <div class="ui large image">
-                <img src="http://www.cupofcrypto.com/sites/default/files/block.png">
+                <img src="https://raw.githubusercontent.com/siliconmagi/pictures/master/block.png">
             </div>
             <div class="description">
                 <div class="ui header">Swordman</div>
@@ -468,7 +468,7 @@
         </div>
         <div class="image content">
             <div class="ui large image">
-                <img src="http://www.cupofcrypto.com/sites/default/files/titor.png">
+                <img src="https://raw.githubusercontent.com/siliconmagi/pictures/master/titor.png">
             </div>
             <div class="description">
                 <div class="ui header">John Titor</div>
@@ -483,7 +483,7 @@
         </div>
         <div class="image content">
             <div class="ui small image">
-                <img src="https://res.cloudinary.com/siliconmagi/image/upload/v1472355518/atarOptimize_txdmpt.svg">
+                <img src="http://cdn.rawgit.com/siliconmagi/pictures/master/atar.svg">
             </div>
             <div class="description">
                 <div class="ui header">Contact Information</div>
