--- a/index.html
+++ b/index.html
@@ -22,17 +22,8 @@
         }
 
         body {
-            /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f0f9ff+0,cbebff+47,a1dbff+100;Blue+3D+%2313 */
-            background: #f0f9ff;
-            /* Old browsers */
-            background: -moz-linear-gradient(top, hsla(204, 100%, 97%, 1) 0%, hsla(203, 100%, 90%, 1) 47%, hsla(203, 100%, 82%, 1) 100%);
-            /* FF3.6-15 */
-            background: -webkit-linear-gradient(top, hsla(204, 100%, 97%, 1) 0%, hsla(203, 100%, 90%, 1) 47%, hsla(203, 100%, 82%, 1) 100%);
-            /* Chrome10-25,Safari5.1-6 */
-            background: linear-gradient(to bottom, hsla(204, 100%, 97%, 1) 0%, hsla(203, 100%, 90%, 1) 47%, hsla(203, 100%, 82%, 1) 100%);
-            /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-            filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#f0f9ff', endColorstr='#a1dbff', GradientType=0);
-            /* IE6-9 */
+            background-image: url("https://raw.githubusercontent.com/siliconmagi/pictures/master/_s_a96b82c96d82e0f0g64h074E4F0E634F1C6C4524843E2E9D2FA4AC4DiE9.png");
+            background-repeat: repeat;
         }
 
         p {
@@ -45,7 +36,7 @@
         }
 
         .ui.vertical.menu {
-            margin-top: 10px !important;
+            margin-top: 45px !important;
             width: 100%;
             display: none;
         }
